# roux

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.circleci/: config.yaml  config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  rust.yml
src/: client.rs  config.rs  lib.rs
src/client/: mod.rs
src/me/: mod.rs
src/me/responses/: inbox.rs  me.rs  mod.rs
src/me/structures/: me.rs  mod.rs
src/models/: mod.rs
src/models/about/: mod.rs
src/models/comment/: mod.rs
src/models/friend/: mod.rs
src/models/inbox/: mod.rs
src/models/link_flair/: mod.rs
src/models/me/: mod.rs  response.rs
src/models/moderator/: mod.rs
src/models/overview/: mod.rs
src/models/reply/: mod.rs
src/models/response/: mod.rs
src/models/saved/: mod.rs
src/models/submission/: mod.rs
src/models/subreddit/: mod.rs  response.rs
src/models/user/: mod.rs
src/responses/: mod.rs
src/subreddit/: mod.rs
src/subreddit/responses/: comments.rs  mod.rs  moderators.rs  submissions.rs  subreddits.rs
src/subreddit/structures/: mod.rs  moderators.rs
src/user/: mod.rs
src/user/responses/: about.rs  comments.rs  mod.rs  overview.rs  submitted.rs
src/user/structures/: comments.rs  mod.rs  overview.rs  submitted.rs
src/util/: defaults.rs  error.rs  mod.rs  option.rs  url.rs
tests/: tests.rs
