[package]
name = "roux"
version = "2.0.0"
authors = ["Justin Duch <justin@duch.me>"]
edition = "2021"
license = "MIT"
description = "Simple and (a)syncronous Reddit API wrapper"
readme = "README.md"
documentation = "https://docs.rs/roux"
repository = "https://github.com/halcyonnouveau/roux"
keywords = ["reddit", "api", "async"]
categories = ["authentication", "api-bindings", "network-programming"]
exclude = [".github/*", ".gitignore"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maybe-async = "0.2.6"
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.8.4", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"

[badges]
circle-ci = { repository = "halcyonnouveau/roux.rs" }

[features]
default = ["native-tls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
blocking = ["maybe-async/is_sync", "reqwest/blocking"]
